# ML_Projekt

./: .gitignore  ML_Projekt run analysis.xlsx  Notiz  Präsentation des Epochen Klassifikators.pptx  README.md  app.py  prepare_data.py  pyproject.toml  requirements.txt
notebooks/: notebook.ipynb  notebook_V1.ipynb  notebook_V2.ipynb
