[project]
name = "ml-projekt"
version = "0.1.0"
description = "Epochen Klassifikator – Klassifikation von Kunstepochen mittels Transfer Learning mit ResNet50"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]